refactor reportError to also have reportOK, etc

--- a/examples/push_notifications/client/index.html
+++ b/examples/push_notifications/client/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Push notifications example</h1>
     <label>App server: <input type="text" id="server" /></label>
-    <div id="error"></div>
+    <div id="messages"></div>
     <script src="js/main.js"></script>
   </body>
 </html>
